spud/static/css/global.css
body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif; color:#333; background:#fff; }

/* AUTO COMPLETE */
.ui-autocomplete-input { width:99%; }
.ui-autocomplete { overflow-x:hidden; overflow-y:auto; max-height:500px; max-width:340px; z-index: 200; }
.ui-autocomplete .ui-menu-item { padding-top:4px; padding-bottom:4px; }
.ui-autocomplete .ui-menu-item a { border: 1px solid #ffffff; margin: -1px; }
.ui-autocomplete .ui-menu-item img { float:left; }
.ui-autocomplete .ui-menu-item .title { margin-left:140px; font-weight:bold; }
.ui-autocomplete .ui-menu-item .desc { margin-left:140px; }

/* PHOTO STATUS */
.photo_list .removed { text-decoration: line-through; opacity:0.5; }
.photo_list .regenerate { background:#CCE; color:#333; }
.photo_list .ui-selected { background: #F39814; }

.photo_article .removed { text-decoration: line-through; opacity:0.5; }
.photo_article .regenerate { background:#CCE; color:#333; }
.photo_article .ui-selected { background: #F39814; }

.slideshow .photo.removed { background:#999; color:#333; }
.slideshow .photo.regenerate { background:#CCE; color:#333; }
.slideshow .photo.ui-selected { background: #F39814; }

/* PHOTO DETAILS */
.photo_article { border:1px solid #000; margin-bottom: 10px; }

.photo_block { display:inline-block; vertical-align:top; width:200px; min-height:420px; }
.photo_block { border:1px solid #ddd; margin:5px; }
.photo_block .photo_summary { margin: 5px; }
.photo_block h2 { margin: 5px; }
.photo_block ul  { padding-left: 20px; }
.photo_block label { display:block; font-weight:bold; margin-top:4px; }
.photo_block input[type="text"] { width:192px; }
.photo_block textarea { width:192px; }
.photo_block select { width:100%; }

.photo_image_block { width:auto; }
.photo_image_block .title { font-weight:bold; }

/* PHOTO LIST */
.photo_item { border:1px solid #dddddd; }
.photo_item:HOVER { border:1px solid #000; }
.photo_item .title { font-weight:bold; }
.photo_item.ui-selecting { background: #FECA40; }
.photo_item .desc { text-align: left; }
.photo_item .desc ul { text-align: left; }
.photo_item .desc ol { text-align: left; }

.photo_list { border:1px solid #333; margin-bottom: 10px; }
.photo_list > ul { padding:0; }
.photo_list .photo_item { display:inline-block; vertical-align:top; height:150px; margin:10px; padding-top:10px; text-align: center; width:170px; }
.photo_list .photo_item .desc { float:left; display:none; }
.photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; color:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }

.children { border:1px solid #f00; }

/* FEEDBACK LIST */

.feedback_item { border:1px solid #dddddd; background: #ddd; }
.feedback_item > div { text-decoration: none; opacity:1.0; }
.feedback_item .title { font-weight:bold; }
.feedback_item img { float: right; }
.feedback_item.public > div { background:#fff; }
.feedback_item.public { background:#fff; }
.feedback_item.removed > div { text-decoration: line-through; opacity:0.5; }

.feedback_list { border:1px solid #333; margin-bottom: 10px; }
.feedback_list .feedback_ul { padding: 0; }
.feedback_list .feedback_ul > li { list-style-type: none; }
.feedback_list .feedback_item { vertical-align:top; margin:10px; padding:10px; }

/* PAGINATOR */
.paginator { padding:10px; line-height:22px; margin:0; solid #ddd; }
.paginator a { padding:2px 6px; border:solid 1px #ccc; }
.paginator a:link, .paginator a:visited { text-decoration:none; }
.paginator a.showall { padding:0 !important; border:none !important; }
.paginator a.showall:hover { color:#036 !important; background:transparent !important; }
.paginator .end { border-width:2px !important; margin-right:6px; }
.paginator .this-page { padding:2px 6px; font-weight:bold; vertical-align:top; }
.paginator a:hover { color:white; background:#5b80b2; border-color:#036; }

/* LIST INFO BOX */
.infobox { border:1px solid #000; padding:10px; margin-bottom:10px; }
.infobox .image { float: left; }
.infobox .def_list .item { border:1px solid #ddd; display: inline-block; width:200px; height:200px; margin:5px; vertical-align: top;}
.infobox .def_list .term { margin:0; padding:5px; background: #000; color: #fff; text-align: center; font-weight: bold; }
.infobox .def_list .definition { margin: 0; padding: 5px; border-top: 1px solid #999; padding: 5px; }

/* PHOTO INFO BOX */
.photo_block .def_list .item { margin-bottom: 10px; }
.photo_block .def_list .term { background: #ddd; color: #333; text-align: left; font-weight: bold; padding: 5px; }
.photo_block .def_list .definition { padding: 5px; }

/* LINKS */
a:link, a:visited { color: #5b80b2; text-decoration:none; }
a:hover { color: #036; }
a img { border:none; }
a.section:link, a.section:visited { color: white; text-decoration:none; }

/* GLOBAL DEFAULTS */
p, ol, ul, dl { margin:.2em 0 .8em 0; }

h1,h2,h3,h4,h5 { font-weight:bold; }
h1 { font-size:180%; color:#666; padding:0 6px 0 0; margin:0 0 .2em 0; }
h2 { font-size:160%; margin:1em 0 .5em 0; }
h2.subhead { font-weight:normal;margin-top:0; }
h3 { font-size:140%; margin:.8em 0 .3em 0; color:#666; font-weight:bold; }
h4 { font-size:120%; margin:1em 0 .8em 0; padding-bottom:3px; }
h5 { font-size:100%; margin:1.5em 0 .5em 0; color:#666; text-transform:uppercase; letter-spacing:1px; }

form { margin:0; padding:0; }
fieldset { margin:0; padding:0; }

blockquote { color:#777; margin-left:2px; padding-left:10px; border-left:5px solid #ddd; }
code, pre { font-family:"Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace; background:inherit; color:#666; }
pre.literal-block { margin:10px; background:#eee; padding:6px 8px; }
code strong { color:#930; }
hr { clear:both; color:#eee; background-color:#eee; height:1px; border:none; margin:0; padding:0; font-size:1px; line-height:1px; }

/* TEXT STYLES & MODIFIERS */
.small { font-size:11px; }
.tiny { font-size:10px; }
p.tiny { margin-top:-2px; }
.mini { font-size:9px; }
p.mini { margin-top:-3px; }
.help, p.help { color:#999; }
p img, h1 img, h2 img, h3 img, h4 img, td img { vertical-align:middle; }
.quiet, a.quiet:link, a.quiet:visited { color:#999 !important;font-weight:normal !important; }
.quiet strong { font-weight:bold !important; }
.float-right { float:right; }
.float-left { float:left; }
.clear { clear:both; }
.align-left { text-align:left; }
.align-right { text-align:right; }
.example { margin:10px 0; padding:5px 10px; background:#efefef; }
.nowrap { white-space:nowrap; }

/* MODULES */
.module { border:1px solid #ccc; margin:5px; background:white; }
.module blockquote { margin-left:12px; }
.module h3 { margin-top:.6em; }
.module h2, .module caption, .inline-group h2 { margin:0; padding:2px 5px 3px 5px; text-align:left; font-weight:bold; background:#7CA0C7 url(../img/admin/default-bg.gif) top left repeat-x; color:white; }
.module .menu { border: none; }

/* MESSAGES & ERRORS */
ul.messagelist { padding:0 0 5px 0; margin:0; }
ul.messagelist li { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border-bottom:1px solid #ddd; color:#666; background:#ffc url(../img/admin/icon_success.gif) 5px .3em no-repeat; }
.errornote { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border:1px solid red; color:red;background:#ffc url(../img/admin/icon_error.gif) 5px .3em no-repeat; }
ul.errorlist { margin:0 !important; padding:0 !important; }
.errorlist li { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border:1px solid red; color:white; background:red url(../img/admin/icon_alert.gif) 5px .3em no-repeat; }
td ul.errorlist { margin:0 !important; padding:0 !important; }
td ul.errorlist li { margin:0 !important; }
.errors { background:#ffc; }
.errors input, .errors select { border:1px solid red; }
div.system-message { background: #ffc; margin: 10px; padding: 6px 8px; }
div.system-message p.system-message-title { padding:4px 5px 4px 25px; margin:0; color:red; background:#ffc url(../img/admin/icon_error.gif) 5px .3em no-repeat; }
.description { padding:5px 0 0 12px; }

/* BREADCRUMBS */
div.breadcrumbs { background:white url(../img/admin/nav-bg-reverse.gif) 0 -10px repeat-x; padding:2px 8px 3px 8px; color:#999;  border-top:1px solid white; border-bottom:1px solid #ccc; text-align:left; }

/* SLIDE SHOW */
.slideshow {
    position: absolute;
    left: 0;
    top: 0;
    display: block;
}
.slideshow .photo {
    width: 100%;
    height: 100%;
    display: block;
    background: #000;
    color: #aaa;
}

.overlapped h2 {
    display: none;
}

.overlapped .main_menu  {
    display: none;
}

.overlapped .selection_menu  {
    display: none;
}


#content-related.overlapped {
    position: absolute;
    top: 10px;
    display: block;
    color: #aaa;
    background: url('../img/bg-black.png');
}

.overlapped .module {
    background: transparent;
}

/* ARROWS */
.slideshow .prevslide, .slideshow .nextslide { top:50%; }
.prevslide, .nextslide{ position:absolute; height:43px; width:43px; bottom:0; margin-top:-21px; opacity:0.6; }
.prevslide{ left:10px; background:url('../img/back.png'); }
.nextslide{ right:10px; background:url('../img/forward.png'); }
.prevslide:active, .nextslide:active{ margin-top:-19px; }
.prevslide:hover, .nextslide:hover{ cursor:pointer; }

/* FADING */
.fade{opacity:0;-webkit-transition:opacity 0.15s linear;-moz-transition:opacity 0.15s linear;-o-transition:opacity 0.15s linear;transition:opacity 0.15s linear;}
.fade.in{opacity:1;}

/* FORMS */
label { font-weight:normal; color:#666; font-size:12px; }
.required label, label.required { font-weight:bold; color:#333; }

/* OTHER */
.loading * { visibility: hidden; }

/* MOBILE */
@media screen and (max-width: 700px) {
.menu { padding:0 10px; margin:0; }
.menu li { list-style:none; border-top: 1px solid #777; padding: 20px 0; margin: 0; }
.menu li:active { border: 1px solid #000; }
.photo_container { border:none; }
.photo_block { border:none; min-height:0; margin:0; }
.photo_detail_photo { padding:0; }
#header { display:none; }
.breadcrumbs { display:none; }
.object-tools { display:none; }
#content h1 { display:none; }
.paginator { line-height:42px; }
.paginator a.relative { display:inline; }
.paginator a, .paginator span { padding:12px 16px; display:none; }

